# cmake_windows_ninja

./: CMakeLists.txt  main.cpp  readme.md
